# sameagentpy

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  agent.spec  config.example.yaml  main.py  pyproject.toml  requirements.txt  session-1783243289.md
.claude/: settings.local.json
agent/: __init__.py  agent_economy.py  app.py  async_engine.py  audit_log.py  auth.py  autonomous.py  backup.py  boot_sequence.py  branching.py  browser_automation.py  bubbles.py  cache.py  cancellation.py  causal_model.py  celebrate.py  cicd_builder.py  cli.py  clipboard.py  cloud_cost.py  code_metrics.py  cognitive.py  commands.py  config.py  connection_pool.py  consensus.py  constitutional.py  context_manager.py  core.py  cost_tracker.py  counterfactual.py  database.py  docker_orchestrator.py  effects.py  effort.py  events.py  exceptions.py  fake_detector.py  fallback.py  feature_flags.py  (+76 more)
agent/commands/: __init__.py  base.py  builtin_commands.py  config_command.py  enterprise_commands.py  feature_commands.py  goal_command.py  persona_command.py  registry.py  session_commands.py  ui_commands.py  v3_commands.py  v4_commands.py
agent/plugins/: __init__.py  example_calculator.py  example_plugin.py  loader.py
agent/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  fireworks_provider.py  gemini_provider.py  lovable_provider.py  mistral_provider.py  ollama_provider.py  (+3 more)
docs/: ARCHITECTURE.md  PROVIDERS.md  TOOLS.md
scripts/: healthcheck.py  list_tools.py
tests/: __init__.py  test_async_engine.py  test_auth.py  test_autonomous.py  test_cache.py  test_calculator.py  test_cli.py  test_commands.py  test_convert_color.py  test_database.py  test_effects.py  test_enterprise_v2.py  test_enterprise_v3.py  test_enterprise_v4.py  test_fileops.py  test_guardrails.py  test_health.py  test_infra.py  test_math_data_system.py  test_memory.py  test_metrics.py  test_middleware.py  test_persona_config.py  test_plugins.py  test_providers.py  test_rag.py  test_ratelimit.py  test_sandbox.py  test_search_edit.py  test_session.py  test_shell.py  test_text_random.py  test_themes_effects.py  test_tokens.py  test_tools.py  test_ui_features.py  test_utils.py  test_yaml_config.py
(+40 files in other folders)
